--- a/bai123.html
+++ b/bai123.html
@@ -3,89 +3,43 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>BAI1</title>
+    <title>CI</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
 <div class="bai1">
-    <p> Bai 1: Viết công thức in ra danh sách các số là kết quả của việc lũy thừa một số n lần.<br>
-        Ví dụ có một danh sách nhập vào là arr = [16,32,72,96] thì dãy được in ra là arr = [16, 32] vì 16 = 4 mũ 2 và 32 = 2 mũ 5 (Thời gian làm bài: 15')
+    <p> Bai 1: Cho n số nguyên liên tiếp từ 0 đến n-1 được biểu diễn trên một vòng tròn, khoảng cách giữa các số bằng nhau (và tất nhiên là 0 và số n-1 cũng ở cạnh nhau). <br>
+        Biết rằng n là số nguyên dương chẵn nằm trong khoảng từ 4 đến 20 <br>
+        Viết hàm findOppositeNumber(n, inputNumber) cho trước 2 tham số đầu vào là n và inputNumber tồn tại trong dãy.<br> 
+        Tìm số đối diện với số inputNumber đó (0 	&lt;= inputNumber 	&lt;= n - 1)<br>
+        findOppositeNumber(10, 2) trả về 7
     </p>
     <button onclick="bai1()"> Bai 1</button>
     <div>Your array: <p id="arrNum" class="arrNum"></p></div>  
-    <div>=>> Result: <p id="result1" class="result1"></p></div>  
+    <div>=>> the Opposite Number: <p id="result1" class="result1"></p></div>  
 </div>
 <div class="bai2">
-    <p>Bai 2: Viết hàm tính tổng của 2 đối số, biết rằng nếu chỉ nhập vào 1 đối số thì trả về một hàm khác chứa đối số còn lại.<br>
-         Ví dụ add(2, 3) return 5, add(2)(3) return 5, add("2", "3") return undefined
+    <p>Bai 2: Viết 1 hàm nhận vào 2 chuỗi s1 và s2, trả về đầu ra là một chuỗi mới chứa các kí tự xen kẽ cùng vị trí vị trí của 2 chuỗi với nhau<br>
+        merge2String(“abc”, “123”) trả về a1b2c3
     </p>
     <button onclick="bai2()"> Bai 2</button>
     <div><p id="result2" class="result2"></p> </div>   
 </div>
 <div class="bai3">
     <p>
-        Bai 3: Xây dựng một Photo Gallery show ảnh theo từng chủ đề khác nhau, biết rằng trên màn hình laptop mỗi hàng chứa 3 ảnh cách đều nhau và cách đều với hai lề trái và phải.<br>
-        Khi click vào mỗi ảnh thì hiện ra thông tin của bức ảnh, click lại lần nữa thì mất.<br>
-        Lưu ý: khuyến khích lưu link các ảnh trong một file JSON có sẵn (Thời gian làm bài: 60') *
+        Bai 3: Xây dựng trang web "Dự đoán kết quả xổ số". Với các chức năng sau:<br>
+        Người chơi phải đoán số trong một khoảng cho phép và nhập vào ô dự đoán, nếu nhập sai hiện thông báo nhập lại <br>
+        Người chơi được đoán tối đa 3 lần <br>
+        Hiện kết quả đúng nếu người chơi chọn sai số đã dự đoán <br>
+        Hiện kết quả trúng thưởng nếu người chơi chọn đúng số <br>
+        Giao diện đẹp và có responsive để có thể chơi thử trên smartphone là một điểm cộng <br>
+        Có link trên github page hoặc link bất kỳ có thể truy cập càng tốt. <br>
     </p>
     <a href="bai3.html" ><button> Bai 3</button></a>
 </div>
 
-    <style>
-        *{
-            margin: 0;
-            padding: auto;
-        }
-        button{
-            margin: 5px 0;
-        }
-        .bai1, .bai2 ,.bai3{
-            margin: 20px 10px;
-        }
-        .result1, .result2{
-            font-size: 40px;
-        }
-    </style>
-
-<script>
-    function bai1() {
-     let arr = [];      
-     let res = [];
-     arr = prompt("Enter the Element, separated by ( space ): ");
-     let arrNum = arr.split(" ");
-
-     let size = arrNum.length;   
-     for (let i = 0; i < size; i++) {
-        for (let j = 2; j <= Math.sqrt(arrNum[i]); j++) {
-            let b = arrNum[i];
-            while (b!=1) {
-                if (b%j == 0) {
-                    b/=j;
-                } else {
-                    break;
-                }
-            }
-            if (b==1) {
-                res.push(arrNum[i]);
-                break;
-            }
-        }
-    }
-     document.getElementById("arrNum").innerHTML = arrNum;
-     document.getElementById("result1").innerHTML = res;
-    }
-
-    function bai2() {   
-     let a = Number(prompt("Enter the 1st number: "));
-     let b = Number(prompt("Enter the 2nd number: "));
-     
-     function add(num1, num2) {
-         return num1 + num2;
-     }
-    document.getElementById("result2").innerHTML = add(a,b);
-    }
-
-    
-</script>
+<script  src="bai1.js"></script>
+<script  src="bai2.js"></script>
 </body>
 </html>
