--- a/bai3.html
+++ b/bai3.html
@@ -20,12 +20,12 @@
         </div>
         <div class="searchPlace">
                 <input type="number" class="input" placeholder="Enter number" id="inputValue" autofocus>
-                <span><button type="button" class="btn" onclick="checkNumber()">Check</button></span>
+                <span><button type="button" class="btn" id="btn" onclick="checkNumber()">Check</button></span>
         </div>
         <div class="comment">
             <div class="commentText" id="status">Let's take a break, play a Game.</div>
         </div>
-        <button class="btn" id="btn"> <a href="bai123.html" > <i class="fa fa-chevron-circle-right"></i> Back </a></button>
+        <button class="btn"> <a href="bai123.html" > <i class="fa fa-chevron-circle-right"></i> Back </a></button>
     </section>
 
     <script src="bai3.js"></script>
