--- a/testCI-newest/bai3.html
+++ b/testCI-newest/bai3.html
@@ -25,7 +25,7 @@
         <div class="comment">
             <div class="commentText" id="status">Let's take a break, play a Game.</div>
         </div>
-        <button class="btn"> <a href="bai123.html" > <i class="fa fa-chevron-circle-right"></i> Back </a></button>
+        <button class="btn"> <a href="index.html" > <i class="fa fa-chevron-circle-right"></i> Back </a></button>
     </section>
 
     <script src="bai3.js"></script>
