--- a/testCF-01/index.html
+++ b/testCF-01/index.html
@@ -10,20 +10,22 @@
 </head>
 <body>
 <div class="bai1">
-    <p>Bai1: Viết hàm chuyển đổi các số nguyên về số La mã. Ví dụ nhập vào 6 => output là VI</p>
+    <p>Bai1: Nhập vào một mảng các số nguyên, tìm cặp hai số liền kề có tích lớn nhất và trả về kết quả của phép nhân 2 số đó.</p>
     <button onclick="bai1()"> Bai 1</button>
-    <div>Số bạn đã nhập: <span id="num" class="input"></span></div>  
-    <div>=>> Số La Mã: <span id="result1" class="result"></span></div>  
+    <div>Mảng bạn đã nhập: <span id="num1" class="input"></span></div>  
+    <div>=>> Tích 2 số lón nhất: <span id="result1" class="result"></span></div>  
 </div>
 <div class="bai2">
-    <p>Bai2: (Không sử dụng câu điều kiện) Viết hàm kiểm tra danh sách các hộ gia đình có số điện tiêu thụ vượt quá 100 số mỗi tháng.<br> Danh sách chứa các object có key và value tương ứng ví dụ {soNha : "10", soDien: 101}. 
+    <p>Bai2: Có một nhóm người đang đứng thành một hàng, để chia ra làm 2 đội từ hàng người thì quản trò chia như sau:<br>+ Người đứng thứ nhất vào Team 1, <br>+ Người đúng thứ hai vào Team 2, <br>+ Người đứng thứ ba vào lại Team 1, <br>+...Cứ tiếp tục như thế cho đến người cuối cùng.<br>Viết chương trình có đầu vào là một mảng chưa cân nặng của tất cả mọi người theo thứ tự hàng ban đầu và yêu cầu trả về mảng chưa tổng cân nặng của 2 team 
     </p>
     <button onclick="bai2()"> Bai 2</button>
-    <div><p id="result2" class="result2"></p> </div>   
+    <div>Mảng bạn đã nhập: <span id="num2" class="input"></span></div>  
+    <div>=>> Tổng cân nặng lần lượt của 2 Team: <span id="result2" class="result"></span></div>   
 </div>
 <div class="bai3">
     <p>
-        Bai 3: Xây dựng Web app chia sẻ công thức nấu ăn.<br>Trang web có những chức năng như:<br>+ Đăng nhập, đăng kí.<br>+ Công thức hiển thị người đóng góp (chính là tài khoản đăng nhập) và các thành phần cùng cách chế biến.<br>+ Cho phép người dùng thêm công thức các món ăn.
+        Bai 3: Xây dựng website rút gọn link từ API cho sẵn (đọc tài liệu sau để lấy API: https://shrtco.de/docs/)<br>
+        Các chức năng như trong video minh hoạ https://youtu.be/hhdiS8TGiPQ
     </p>
     <a href="bai3.html" ><button> Bai 3</button></a>
 </div>
