--- a/testCF-01/bai3.html
+++ b/testCF-01/bai3.html
@@ -7,21 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/7dd4672799.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="./CSS/app.css" />
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-auth-compat.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <header id="header" class="header"></header>
-
-    <div id="dashboard" class="dashboard"></div>
-
-    <div id="dishShow" class="dishShow"></div>
-
-    <div id="modalLogin" style="display: none"></div>
-    <div id="modalRegister" style="display: none"></div>
-    <div id="modalAdd" style="display: none"></div>
-
+    <div id="main"></div>
     <script type="module" src="./JS/app.js"></script>
   </body>
 </html>
